--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ cryptography==41.0.7
 python-dotenv==1.0.0
 email-validator==2.1.0
 gunicorn==20.1.0
-psycopg>=3.1.0
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
